# dc_motor_pid_control

./: README.md
3d_plots/: README.md
design/: ProyectoV2.kicad_prl  ProyectoV2.kicad_pro
design/RP2040-Zero.pretty/: rp2040-zero-tht.kicad_mod
hardware/: ProyectoV2.kicad_pcb  ProyectoV2.kicad_sch
mcu_code/: CMakeLists.txt  app_tasks.c  app_tasks.h  labels.h  macros.h  mcu_code.c
mcu_code/libs/as5600/: CMakeLists.txt
mcu_code/libs/as5600/include/: as5600.h
mcu_code/libs/as5600/src/: as5600.c
mcu_code/libs/freertos/include/: FreeRTOSConfig.h
mcu_code/libs/l298/: CMakeLists.txt
mcu_code/libs/l298/include/: l298.h
mcu_code/libs/l298/src/: l298.c
mcu_code/libs/pid/: CMakeLists.txt
mcu_code/libs/pid/include/: pid.h
mcu_code/libs/pid/src/: pid.c
mcu_code/libs/plotter/: CMakeLists.txt
mcu_code/libs/plotter/include/: plotter.h
mcu_code/libs/plotter/src/: plotter.c
pico_code/: platformio.ini
pico_code/include/: app_tasks.h
pico_code/src/: app_tasks.c  main.c
pid_plotter/: README.md  app.py  pid_plotter.py  requirements.txt
